# avular_kalman_slam

./: CMakeLists.txt  README.md  package.xml
config/: dual_ekf.yaml  ekf.yaml  gps_wpf_demo.mvc  nav2_params.yaml  pucp_waypoints.yaml  slam.yaml
launch/: bringup.launch.py  bringup_slam.launch.py  localization.launch.py  localization_slam.launch.py  mapviz.launch.py  navigation.launch.py  simulation.launch.py  slam.launch.py  visualization.launch.py
rviz/: navigation_config.rviz
scripts/: gps_waypoint_follower.py
world/: empty_world.world  slam_world.world
